classDiagram
direction TB

    class EstadoReproductor {
        +reproducir(reproductor)
        +pausar(reproductor)
        +detener(reproductor)
        +avanzar_cancion(reproductor)
        +retroceder_cancion(reproductor)
    }

    class EstadoReproduciendo {
        +reproducir(reproductor)
        +pausar(reproductor)
        +detener(reproductor)
        +avanzar_cancion(reproductor)
        +retroceder_cancion(reproductor)
    }

    class EstadoPausado {
        +reproducir(reproductor)
        +pausar(reproductor)
        +detener(reproductor)
        +avanzar_cancion(reproductor)
        +retroceder_cancion(reproductor)
    }

    class EstadoDetenido {
        +reproducir(reproductor)
        +pausar(reproductor)
        +detener(reproductor)
        +avanzar_cancion(reproductor)
        +retroceder_cancion(reproductor)
    }

    class Reproductor {
        -estado_actual: EstadoReproductor
        -estado_reproduciendo: EstadoReproduciendo
        -estado_pausado: EstadoPausado
        -estado_detenido: EstadoDetenido
        +cambiar_estado(EstadoReproductor)
        +reproducir()
        +pausar()
        +detener()
        +avanzar_cancion()
        +retroceder_cancion()
    }

    %% Declaración de interfaz
    <<interface>> EstadoReproductor

    %% Relaciones de implementación
    EstadoReproductor <|.. EstadoReproduciendo : implementa
    EstadoReproductor <|.. EstadoPausado : implementa
    EstadoReproductor <|.. EstadoDetenido : implementa

    %% Composición: Reproductor contiene los estados
    Reproductor *-- EstadoReproduciendo: compone
    Reproductor *-- EstadoPausado: compone
    Reproductor *-- EstadoDetenido: compone